--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <form class="form-inline" id="form-inline">
 
-            <input type="text" id="search-box" />
+            <!-- <input type="text" id="search-box" /> -->
             <button type="submit" class="page-btn" btn-primare>Шукати</button>
 
     </form>
