--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
     <title>Pokemon</title>
 </head>
 <body>
+ <div class="container">
 
-    <form class="form-inline" id="form-inline">
 
-            <!-- <input type="text" id="search-box" /> -->
-            <button type="submit" class="page-btn" btn-primare>Шукати</button>
-
-    </form>
-
+    <button type="button" class="page-btn" btn-primare>Шукати</button>
     <div class="js-card-container"></div>
+ </div>
     
     <script src="./js/cards.js" type="module"></script> 
 </body>
